# cg

./: Cargo.toml  README.org
assignment_1/: Cargo.toml
assignment_1/data/: result.xyz
assignment_1/examples/: hull.rs  inside.rs
assignment_1/src/: file.rs  lib.rs  main.rs  structure.rs
assignment_2/: Cargo.toml  README.md
assignment_2/src/: main.rs
assignment_3/: Cargo.toml  README.md
assignment_3/data/: scene.json
assignment_3/src/: function.rs  main.rs  object.rs  scene.rs  structure.rs
assignment_4/: Cargo.toml  README.md
assignment_4/data/: dodeca.off  scene.json
assignment_4/src/: bbox.rs  function.rs  main.rs  object.rs  scene.rs  structure.rs  triangle.rs
assignment_5/: Cargo.toml
assignment_5/data/: bunny.off  uniform.json
assignment_5/src/: README.md  attributes.rs  main.rs  raster.rs
assignment_6/: Cargo.toml
assignment_6/src/: attributes.rs  main.rs  raster.rs  viewer.rs
