[package]
name = "assignment_2"
version = "0.1.0"
authors = ["Dan <igaryhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.11.2", features = ["mint"] }
image = "0.23.8"
nalgebra = { version = "0.22.0", features = ["mint"] }
mint = "0.5.5"
rayon = "1.4.1"
