[package]
name = "assignment_3"
version = "0.1.0"
authors = ["Dan <igaryhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = {version = "0.9.3", features = ["serde"]}
image = "0.23.8"
serde = "1.0"
serde_json = "1.0"
typetag = "0.1"