[package]
name = "assignment_4"
version = "0.1.0"
authors = ["Dan <igaryhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = {version = "0.11.2", features = ["serde", "mint"]}
image = "0.23.8"
serde = "1.0"
serde_json = "1.0"
typetag = "0.1"
indicatif = { version = "0.15.0", features = ["rayon"] }
nalgebra = { version = "0.22.0", features = ["mint"] }
mint = "0.5.5"
rand = "0.7.3"
rayon = "1.4.1"
anyhow = "1.0.35"
