[package]
name = "assignment_5"
version = "0.1.0"
authors = ["Dan <igaryhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.10.2", features = ["serde"] }
image = "0.23.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = { version = "0.15.0", features = ["rayon"] }
